# algorithms

./: .gitignore  CMakeLists.txt  enables.h  main.cpp
data/: graph.xml  wiki.xml
graph/: graph.cpp  graph.h  model.cpp  model.h
nam/: NMA.cpp  NMA.h  Substitution.cpp  Substitution.h
post/: Machine.cpp  Machine.h
sorting/: sorting.cpp  sorting.h
